--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: bogstandard/lapland-golf-course
 title: 'Lapland Golf Club'
-description: '~ Closed for the Summer ~'
+description: '~ Closed for the Summer, opening late November ~'
 players:
   - username: ''
     name: 'Grounds Keeper'
