--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,5 @@ players:
   - username: 'Jabenjy'
     name: 'Ben'
     index: 1
-    url: 'hhttps://github.com/Jabenjy/AdventOfCode2021/blob/main/.scorecard'  
+    url: 'https://github.com/Jabenjy/AdventOfCode2021/blob/main/.scorecard'  
     
