Close the club for another year!

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: bogstandard/lapland-golf-course
 title: 'Lapland Golf Club'
-description: '~ Grand Opening! Welcome Golfers! ~'
+description: '~ Closed until Advent 2022 ~'
 players:
   - username: 'bogstandard'
     name: 'Eric'
